--- a/.ci_support/linux_aarch64_nodejs20.yaml
+++ b/.ci_support/linux_aarch64_nodejs20.yaml
@@ -17,7 +17,7 @@ cxx_compiler:
 cxx_compiler_version:
 - '13'
 docker_image:
-- quay.io/condaforge/linux-anvil-alma-x86_64:8
+- quay.io/condaforge/linux-anvil-x86_64:alma9
 github_actions_labels:
 - cirun-openstack-cpu-large
 icu:
