--- a/recipe/conda_build_config.yaml
+++ b/recipe/conda_build_config.yaml
@@ -1,6 +1,7 @@
 c_stdlib_version:                                   # [(osx and x86_64) or linux]
   - '10.15'                                         # [osx and x86_64]
-  - "2.28"                                          # [linux]
+  - "2.28"                                          # [linux and not aarch64]
+  - "2.34"                                          # [linux and aarch64]
 github_actions_labels:
 - cirun-openstack-cpu-large
 MACOSX_SDK_VERSION:  # [osx and x86_64]
