--- a/.ci_support/osx_arm64_.yaml
+++ b/.ci_support/osx_arm64_.yaml
@@ -2,6 +2,10 @@ MACOSX_DEPLOYMENT_TARGET:
 - '11.0'
 MACOSX_SDK_VERSION:
 - '11.0'
+brotli:
+- '1.0'
+c_ares:
+- '1'
 c_compiler:
 - clang
 c_compiler_version:
@@ -22,6 +26,8 @@ github_actions_labels:
 - cirun-openstack-cpu-large
 icu:
 - '75'
+libsqlite:
+- '3'
 macos_machine:
 - arm64-apple-darwin20.0.0
 openssl:
@@ -33,3 +39,5 @@ zip_keys:
   - cxx_compiler_version
 zlib:
 - '1'
+zstd:
+- '1.5'
